--- a/AppNameT1/AndroidManifest.xml
+++ b/AppNameT1/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="de.weg.wi1415.appnameT1.view.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,23 +25,23 @@
         <activity
             android:name=".MainActivity2"
             android:label="@string/title_activity_main_activity2"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="de.weg.wi1415.appnameT1.view.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.weg.wi1415.appnameT1.MainActivity" />
         </activity>
         <activity
-            android:name=".FolgeActivity"
+            android:name="de.weg.wi1415.appnameT1.view.FolgeActivity"
             android:label="@string/title_activity_folge"
             android:parentActivityName="de.weg.wi.eingabetest.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="de.weg.wi.eingabetest.MainActivity" />
+                android:value="de.weg.wi.eingabetest.de.weg.wi1415.appnameT1.view.EndActivity" />
         </activity>
         <activity
             android:name=".EndActivity"
             android:label="@string/title_activity_end"
-            android:parentActivityName=".FolgeActivity" >
+            android:parentActivityName="de.weg.wi1415.appnameT1.view.FolgeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.weg.wi1415.appnameT1.FolgeActivity" />
